# foundation-data-factory

./: .editorconfig  .gitignore  .pre-commit-config.yaml  BUILD_RUST.md  CHECKLIST.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dockerfile  EXAMPLE.md  Makefile  README.md  RUST_README.md  example_pipeline.yaml  example_pipeline_with_filter.yaml  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
crates/fdf-cli/: Cargo.toml
crates/fdf-cli/src/: main.rs
crates/fdf-engine/: Cargo.toml
crates/fdf-engine/src/: io.rs  lib.rs  plan.rs  runner.rs  spec.rs
crates/fdf-engine/src/io/: reader.rs  writer.rs
crates/fdf-engine/src/io/reader/: column_filter.rs  huggingface.rs  jsonl.rs  multi_file.rs  parquet.rs
crates/fdf-engine/src/io/writer/: jsonl.rs  parquet.rs  sharded.rs
crates/fdf-operators/: Cargo.toml
crates/fdf-operators/src/: lib.rs
crates/fdf-operators/src/audio/: mod.rs
crates/fdf-operators/src/audio/annotator/: mod.rs
crates/fdf-operators/src/audio/filter/: mod.rs
crates/fdf-operators/src/audio/transformer/: mod.rs
crates/fdf-operators/src/common/: mod.rs
crates/fdf-operators/src/common/annotator/: add_id.rs  mod.rs
crates/fdf-operators/src/common/filter/: mod.rs  numeric_range_filter.rs
crates/fdf-operators/src/common/transformer/: mod.rs
crates/fdf-operators/src/image/: mod.rs
crates/fdf-operators/src/image/annotator/: mod.rs
crates/fdf-operators/src/image/filter/: mod.rs
crates/fdf-operators/src/image/transformer/: mod.rs
crates/fdf-operators/src/text/: mod.rs
crates/fdf-operators/src/text/annotator/: mod.rs
crates/fdf-operators/src/text/filter/: fasttext_classifier.rs  gopher_quality.rs  gopher_repetition.rs  leq.rs  mod.rs  symbol_ratio.rs  text_len.rs
crates/fdf-operators/src/text/transformer/: normalize.rs
crates/fdf-operators/src/video/: mod.rs
crates/fdf-operators/src/video/annotator/: mod.rs
crates/fdf-operators/src/video/filter/: mod.rs
crates/fdf-operators/src/video/transformer/: mod.rs
crates/fdf-ops-text/: Cargo.toml
crates/fdf-ops-text/src/: annotate_const.rs  lib.rs  normalize.rs  special_char_ratio.rs
crates/fdf-ops-text/src/annotator/: mod.rs  special_char_ratio.rs
crates/fdf-ops-text/src/filter/: fasttext_classifier.rs  gopher_quality.rs  gopher_repetition.rs  leq.rs  mod.rs  text_len.rs
crates/fdf-ops-text/src/transformer/: mod.rs  normalize.rs
crates/fdf-sdk/: Cargo.toml
crates/fdf-sdk/src/: base.rs  context.rs  lib.rs  micropartition.rs  op.rs  record.rs  registry.rs  sample.rs
docs/: index.md  modules.md
fdf/: __init__.py  api.py
fdf/cli/: __init__.py  main.py
fdf/config/: __init__.py  schema.py
fdf/hooks/: __init__.py  base.py  whylogs_hook.py
fdf/io/: __init__.py  reader.py  writer.py
fdf/mixture/: __init__.py  input_mixture.py
fdf/operators/: __init__.py  base.py  passthrough.py  registry.py  textstat_filter.py
fdf/runtime/: __init__.py  executor.py  local.py  ray_runtime.py
src/: main.rs
src/config/: mod.rs
src/io/: mod.rs
src/operators/: macros.rs  mod.rs  row.rs  textstat.rs  textstat_annotator.rs  textstat_filter.rs
src/runtime/: manifest.rs  mod.rs
tests/: test_api.py  test_cli_basic.py  test_cli_validate.py  test_config_schema.py  test_foo.py  test_hooks.py  test_input_mixture.py  test_io_reader.py  test_io_writer.py  test_operators_passthrough_refiner.py  test_operators_registry.py  test_operators_textstat_filter.py  test_runtime_local.py  test_runtime_ray.py  test_stage_materialization.py  test_whylogs_hook.py
