[package]
name = "foundation-data-factory"
version = "0.0.1"
edition = "2021"
authors = ["Victor An <victor.duo.an@gmail.com>"]
description = "FoundationDataFactory - A high-performance Rust-based data processing pipeline for large-scale multimodal datasets"
license = "Apache-2.0"
repository = "https://github.com/duoan/foundation-data-factory"

[[bin]]
name = "fdf"
path = "src/main.rs"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

# Data processing - use Arrow/Parquet directly (like datamap-rs)
# Using arrow 15 which is stable and doesn't have chrono conflicts
arrow = { version = "15", features = ["ipc"] }
parquet = { version = "15", features = ["arrow"] }

# Parallel processing
rayon = "1.8"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Text processing (for textstat)
regex = "1.10"
unicode-segmentation = "1.11"

# Hugging Face datasets support (via parquet files)
# Note: For now, we read parquet files directly. Full HF hub support can be added later.

# Utilities
walkdir = "2.4"
glob = "0.3"
indicatif = "0.17" # Progress bars

[dev-dependencies]
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
