[workspace]
resolver = "2"
members = [
  "crates/fdf-sdk",
  "crates/fdf-engine",
  "crates/fdf-ops-text",
  "crates/fdf-cli",
]

[workspace.dependencies]
polars = { version = "0.45", features = ["lazy", "parquet", "strings"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
# fasttext = "0.4"  # Optional - requires cmake
