[package]
name = "fdf-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1"
fdf-sdk = { path = "../fdf-sdk" }
arrow = { workspace = true }
arrow-array = { workspace = true }
parquet = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = "1.0"
anyhow = { workspace = true }
hf-hub = { version = "0.4.3", features = ["tokio"] }
tokio = { version = "1", features = ["rt", "macros"] }
indicatif = "0.17"
