[package]
name = "fdf-operators"
version = "0.1.0"
edition = "2021"

[dependencies]
fdf-sdk = { path = "../fdf-sdk" }
arrow-schema = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
# fasttext = { workspace = true }  # Optional - requires cmake
