[package]
name = "fdf-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
parquet = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
serde_yaml = { workspace = true }
serde_json = "1.0"
xxhash-rust = { workspace = true }
